[gd_scene load_steps=7 format=3 uid="uid://dxkq10mmjl517"]

[ext_resource type="Script" path="res://Extras/Scenes/GameScene/GameUI.gd" id="1_vn54u"]
[ext_resource type="Script" path="res://App/Scripts/PauseMenuController.gd" id="2_bmhjc"]
[ext_resource type="PackedScene" uid="uid://dt5ses55itjy4" path="res://Extras/Scenes/SuccessScreen/SuccessScreen.tscn" id="2_p81qm"]
[ext_resource type="PackedScene" uid="uid://cp3p3kqcjh0me" path="res://Extras/Scenes/FailureScreen/FailureScreen.tscn" id="3_gmq5y"]
[ext_resource type="PackedScene" uid="uid://dtdpd6o5xj4dq" path="res://Extras/Scenes/Menus/PauseMenu/PauseMenu.tscn" id="3_n6jen"]
[ext_resource type="Script" path="res://Extras/Scripts/LevelLoader.gd" id="7_dgyvu"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vn54u")
win_scene = ExtResource("2_p81qm")
lose_scene = ExtResource("3_gmq5y")

[node name="PauseMenuController" type="Node" parent="."]
script = ExtResource("2_bmhjc")
pause_menu_packed = ExtResource("3_n6jen")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
autowrap_mode = 2

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelLoader" type="Node" parent="." node_paths=PackedStringArray("level_container")]
script = ExtResource("7_dgyvu")
level_container = NodePath("../Control")
files = Array[String](["res://Extras/Scenes/GameScene/Levels/Level1.tscn", "res://Extras/Scenes/GameScene/Levels/Level2.tscn", "res://Extras/Scenes/GameScene/Levels/Level3.tscn"])
directory = "res://Extras/Scenes/GameScene/Levels"

[connection signal="level_loaded" from="LevelLoader" to="." method="_on_level_loader_level_loaded"]
[connection signal="levels_finished" from="LevelLoader" to="." method="_on_level_loader_levels_finished"]
